# model_eval

./: README.md
app/backend/: .env.example  pyproject.toml
app/backend/alembic/: env.py
app/backend/alembic/versions/: 049cba21f643_add_tables_of_questions_and_your_results.py  103d70dbc051_add_evaluator_id_at_table_of_questions_.py  23d7288c2f60_modify_tables_evalaution_and_evaluation_.py  373103cdf9b9_add_relationship_bidectional_in_.py  4be59b5a9f2c_column_adjustment_task.py  4ca903ca5a50_create_users_table.py  53427d44abdd_create_automatic_evaluation_tables.py  66c29522a5aa_add_human_evaluations_table.py  6e4d6586b761_add_cascade_on_table_question_result.py  9938d822990e_modifies_nullability_constraints_on_.py  a03e4afd3088_remove_unique_constraint_of_table_human_.py  b90568574224_add_collumn_question_at_table_metric.py  c83735858e3e_modifier_table_humanevaluationquestions_.py  dcb859135608_add_table_human_evaluation_status.py  e96423e1cf9c_add_column_in_model_automatic_metric_.py  fe9ad88b958c_add_cascade_in_evaluations_table.py  feaa8d4589dd_add_bidirectional_relationship_in_.py
app/backend/app/: models_db.py  utils.py
app/backend/app/api/: deps.py  main.py
app/backend/app/api/errors/: evaluate_model.py  globals.py  human_evaluation.py
app/backend/app/api/models/: human_evaluation.py  requests.py  responses.py
app/backend/app/api/routers/: auth.py  (+5 more)
app/backend/app/core/: config.py  db.py  enums.py  security.py
app/backend/app/models/: automatic_evaluation.py  human_evaluation.py  token_data.py
app/backend/app/services/: smtplib.py  supabase.py
(+163 files in other folders)
